feat: implement requirement 6b